Added security answer
Added my answer to the security question.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>My first website</title>
+    <title>Squareeyes Stian Lilleng</title>
   </head>
   <body>
     <h1>Hello world!</h1>
@@ -11,6 +11,24 @@
       security attacks? Note: the word count for your answer should not be
       greater than 250 words
     </p>
-    <p id="web-security-answer">[Answer here]</p>
+    <p id="web-security-answer">
+      There are many considerations to take into account when it comes to cyber
+      security in a company. It will depend on whether the company's employees
+      mostly work with PCs and how many employees the company has. If we start
+      from the fact that the company mainly works with PCs and that there is a
+      fair number of employees, the first security measure would be to run
+      security training/courses in the form of simple introductory videos with
+      questions for all employees that will be mandatory, so that the risk of
+      phishing and other specific security threats is reduced. It will be very
+      important to have good security systems and programs that limit the risk
+      of the company being exposed to Cross-Site scripting, SQL injection, and
+      Cross-Site request forgery. Good login with two-step login and routines
+      for changing passwords is also important to avoid unnecessary threats to
+      the system and employees. Strict rules for which programs can be installed
+      on a work PC will reduce the risk of installing malware on employees' work
+      PCs. Random samples of e-mails with simulating phishing attempts will make
+      the employees more confident in their everyday work. Those are only a
+      small number of measures that can help a business with cybersecurity.
+    </p>
   </body>
 </html>
