--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
       greater than 250 words
     </p>
     <p id="web-security-answer">
-      There are many considerations to take into account when it comes to cyber
-      security in a company. It will depend on whether the company's employees
-      mostly work with PCs and how many employees the company has. If we start
-      from the fact that the company mainly works with PCs and that there is a
-      fair number of employees, the first security measure would be to run
-      security training/courses in the form of simple introductory videos with
-      questions for all employees that will be mandatory, so that the risk of
-      phishing and other specific security threats is reduced. It will be very
-      important to have good security systems and programs that limit the risk
-      of the company being exposed to Cross-Site scripting, SQL injection, and
-      Cross-Site request forgery. Good login with two-step login and routines
-      for changing passwords is also important to avoid unnecessary threats to
-      the system and employees. Strict rules for which programs can be installed
-      on a work PC will reduce the risk of installing malware on employees' work
-      PCs. Random samples of e-mails with simulating phishing attempts will make
-      the employees more confident in their everyday work. Those are only a
-      small number of measures that can help a business with cybersecurity.
+      There are many considerations to consider when it comes to cyber security
+      in a company. It will depend on whether the company's employees mostly
+      work with PCs and how many employees the company has. <br />
+
+      If we start from the fact that the company mainly works with PCs and that
+      there is a fair number of employees, the first security measure would be
+      to run security training/courses in the form of simple introductory videos
+      with questions for all employees that will be mandatory, so that the risk
+      of phishing and other specific security threats is reduced. Make all
+      employees in the company care about cyber security, not just the IT
+      department. <br />
+
+      It will be very important to have good security systems and programs that
+      limit the risk of the company being exposed to Cross-Site scripting, SQL
+      injection, and Cross-Site request forgery. Good training and information
+      in this area is very important. <br />
+
+      Good login with two-step login and routines for changing passwords is also
+      important to avoid unnecessary threats to the system and employees. Strict
+      rules for which programs can be installed on a work PC will reduce the
+      risk of installing malware on employees' work PCs. Random samples of
+      e-mails with simulating phishing attempts will make the employees more
+      confident in their everyday work. <br />
+
+      Those are only a small number of measures that can help a business with
+      cybersecurity.
     </p>
   </body>
 </html>
