--- a/index.html
+++ b/index.html
@@ -12,33 +12,29 @@
       greater than 250 words
     </p>
     <p id="web-security-answer">
-      <br /><br />
+      <p>
       There are many considerations to consider when it comes to cyber security
       in a company. It will depend on whether the company's employees mostly
-      work with PCs and how many employees the company has. <br /><br />
-
-      If we start from the fact that the company mainly works with PCs and that
+      work with PCs and how many employees the company has.</p>
+      <p>If we start from the fact that the company mainly works with PCs and that
       there is a fair number of employees, the first security measure would be
-      to run security training/courses in the form of simple introductory videos
+      to run security training/courses in the form of simple introductory videoss
       with questions for all employees that will be mandatory, so that the risk
       of phishing and other specific security threats is reduced. Make all
       employees in the company care about cyber security, not just the IT
-      department. <br /><br />
-
-      It will be very important to have good security systems and programs that
-      limit the risk of the company being exposed to Cross-Site scripting, SQL
-      injection, and Cross-Site request forgery. Good training and information
-      in this area is very important. <br /><br />
-
-      Good login with two-step login and routines for changing passwords is also
+      department.</p>
+      <p>It will be very important to have good security systems and programs that
+        limit the risk of the company being exposed to Cross-Site scripting, SQL
+        injection, and Cross-Site request forgery. Good training and information
+        in this area is very important.</p>
+      <p>Good login with two-step login and routines for changing passwords is also
       important to avoid unnecessary threats to the system and employees. Strict
       rules for which programs can be installed on a work PC will reduce the
       risk of installing malware on employees' work PCs. Random samples of
       e-mails that simulate phishing attempts will make the employees more
-      secure and aware in their everyday work. <br /><br />
-
-      Those are only a small number of measures that can help a business with
-      cybersecurity.
+      secure and aware in their everyday work.</p>
+      <p>Those are only a small number of measures that can help a business with
+      cybersecurity.</p>
     </p>
   </body>
 </html>
