--- a/index.html
+++ b/index.html
@@ -1,40 +1,219 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Squareeyes Stian Lilleng</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to Squareeyes where there is a movie for your every mood. Browse our large selection of movies at competitive prizes. "
+    />
+    <meta
+      name="keywords"
+      content="movies, videos, action, Kids, Fantasy, Horror, Comedy, genre, campaign (only keywords since almost no one uses it anymore)"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="icon" href="../images/Logo.png" />
+    <title>Squareeyes | Homepage</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
-    <h2>Web Security</h2>
-    <p id="web-security-question">
-      How would you advise a potential client to secure his/her website from web
-      security attacks? Note: the word count for your answer should not be
-      greater than 250 words
-    </p>
-    <p id="web-security-answer">
-      <p>
-      There are many considerations to consider when it comes to cyber security
-      in a company. It will depend on whether the company's employees mostly
-      work with PCs and how many employees the company has.</p>
-      <p>If we start from the fact that the company mainly works with PCs and that
-      there is a fair number of employees, the first security measure would be
-      to run security training/courses in the form of simple introductory videoss
-      with questions for all employees that will be mandatory, so that the risk
-      of phishing and other specific security threats is reduced. Make all
-      employees in the company care about cyber security, not just the IT
-      department.</p>
-      <p>It will be very important to have good security systems and programs that
-        limit the risk of the company being exposed to Cross-Site scripting, SQL
-        injection, and Cross-Site request forgery. Good training and information
-        in this area is very important.</p>
-      <p>Good login with two-step login and routines for changing passwords is also
-      important to avoid unnecessary threats to the system and employees. Strict
-      rules for which programs can be installed on a work PC will reduce the
-      risk of installing malware on employees' work PCs. Random samples of
-      e-mails that simulate phishing attempts will make the employees more
-      secure and aware in their everyday work.</p>
-      <p>Those are only a small number of measures that can help a business with
-      cybersecurity.</p>
-    </p>
+    <div class="header-section">
+      <div class="content-wrap">
+        <header>
+          <div class="logo">
+            <a href="index.html">
+              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+            /></a>
+          </div>
+          <label for="hamburger" class="hamburger-icon"
+            ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
+          /></label>
+          <input type="checkbox" id="hamburger" />
+          <nav>
+            <label for="search1" id="searchlabel1">Search</label>
+            <input
+              type="text"
+              class="nav-hidden hidden-search"
+              placeholder="     Search"
+              id="search1"
+            />
+            <div class="h-links">
+              <a href="index.html" class="active">Home</a>
+              <a href="videos.html">Videos</a>
+            </div>
+            <a href="about.html" class="nav-hidden">About</a>
+            <a href="contact.html" class="nav-hidden">Contact</a>
+            <a href="cart.html" class="nav-hidden">Cart</a>
+          </nav>
+          <label for="search2" id="searchlabel2">Search</label>
+          <input
+            type="text"
+            class="search"
+            placeholder="     Search"
+            id="search2"
+          />
+          <div>
+            <a
+              ><img
+                src="images/user_icon.png"
+                alt="User Login Icon"
+                class="user-icon"
+            /></a>
+          </div>
+          <div class="cart-icon">
+            <a href="cart.html"
+              ><img
+                src="images/cart_icon.png"
+                alt="Cart Icon"
+                class="cart-icon"
+            /></a>
+          </div>
+        </header>
+      </div>
+    </div>
+
+    <main>
+      <section class="hero-image">
+        <div class="content-wrap">
+          <div class="hero-text">
+            <h1>
+              Welcome to Squareeyes
+              <span>where there is a movie for your every mood</span>
+            </h1>
+            <div>
+              <a href="videos.html">
+                <h2 class="cta more-videos-button">More Videos</h2>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="best-sellers">
+        <div class="content-wrap">
+          <h2>Best Sellers</h2>
+          <div class="movie-row">
+            <div class="movie">
+              <a href="products/godzilla.html">
+                <img
+                  src="images/cover_godzilla.png"
+                  alt="Godzilla
+                    King of the monsters cover"
+                />
+              </a>
+              <p>Godzilla King of the monsters</p>
+              <h3>$9.99</h3>
+            </div>
+            <div class="movie">
+              <a href="products/toystory.html"
+                ><img src="images/cover_toystory4.png" alt="Toy Story 4 cover"
+              /></a>
+              <p>Toy Story 4</p>
+              <h3>$4.99</h3>
+            </div>
+            <div class="movie">
+              <a href="products/godzilla.html"
+                ><img src="images/cover_sweetheart.png" alt="Sweetheart cover"
+              /></a>
+              <p>Sweetheart</p>
+              <h3>$7.49</h3>
+            </div>
+            <div class="movie">
+              <a href="products/godzilla.html">
+                <img
+                  src="images/cover_once_upon_a_time_in_hollywood.png"
+                  alt="Once Upon A Time In Hollywood cover"
+                />
+              </a>
+              <p>Once Upon A Time In Hollywood</p>
+              <h3>$9.99</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="toy-story_add">
+        <div class="add-container">
+          <a href="products/toystory.html">
+            <h2>Toy Story 4 on sale Now</h2>
+          </a>
+        </div>
+      </section>
+
+      <section class="on-sale">
+        <div class="content-wrap">
+          <h2>On Sale</h2>
+          <section class="movie-row">
+            <div class="movie">
+              <a href="products/godzilla.html">
+                <img src="images/cover_hobbs.png" alt="Hobbs & Shaw cover" />
+              </a>
+              <p>Hobbs & Shaw</p>
+              <h3>$9.99</h3>
+            </div>
+            <div class="movie">
+              <a href="products/godzilla.html"
+                ><img src="images/cover_scream.png" alt="Scream cover"
+              /></a>
+              <p>Scream</p>
+              <h3>$7.99</h3>
+            </div>
+            <div class="movie">
+              <a href="products/godzilla.html"
+                ><img
+                  src="images/cover_adams_family.png"
+                  alt="The Adams Family Halloween cover"
+              /></a>
+              <p>The Adams Family Halloween</p>
+              <h3>$7.99</h3>
+            </div>
+            <div class="movie">
+              <a href="products/godzilla.html">
+                <img src="images/cover_batman.png" alt="The Batman cover" />
+              </a>
+              <p>The Batman</p>
+              <h3>$9.99</h3>
+            </div>
+          </section>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="content-wrap">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <a href="index.html"
+              ><img src="images/Logo.png" alt="Squareyes Logo"
+            /></a>
+          </div>
+          <nav class="footer-links">
+            <div><a href="about.html">About</a></div>
+            <div><a href="contact.html">Contact</a></div>
+          </nav>
+          <nav class="footer-icons">
+            <a href="#"
+              ><img
+                src="images/icon-facebook.png"
+                alt="Facebook Icon"
+                class="facebook-icon"
+            /></a>
+            <a href="#"
+              ><img
+                src="images/icon-instagram.png"
+                alt="Instagram Icon"
+                class="instagram-icon"
+            /></a>
+          </nav>
+        </div>
+        <p>©CA SL 2023</p>
+      </div>
+    </footer>
   </body>
 </html>
