--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
               id="search1"
             />
             <div class="h-links">
-              <a href="index.html" class="active">Home</a>
+              <a href="index.html">Home</a>
               <a href="videos.html">Videos</a>
             </div>
-            <a href="about.html" class="nav-hidden">About</a>
+            <a href="about.html" class="nav-hidden active">About</a>
             <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden">Cart</a>
           </nav>
