--- a/cart.html
+++ b/cart.html
@@ -40,12 +40,12 @@
               id="search1"
             />
             <div class="h-links">
-              <a href="index.html" class="active">Home</a>
+              <a href="index.html">Home</a>
               <a href="videos.html">Videos</a>
             </div>
             <a href="about.html" class="nav-hidden">About</a>
             <a href="contact.html" class="nav-hidden">Contact</a>
-            <a href="cart.html" class="nav-hidden">Cart</a>
+            <a href="cart.html" class="nav-hidden active">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
           <input
