--- a/contact.html
+++ b/contact.html
@@ -147,41 +147,40 @@
         </div>
       </section>
 
-      <section id="chat-window">
+      <div id="chat-window">
         <div></div>
-      </section>
+      </div>
     </main>
-    <section>
-      <footer>
-        <div class="content-wrap">
-          <div class="footer-content">
-            <div class="footer-logo">
-              <a href="index.html"
-                ><img src="images/Logo.png" alt="Squareyes Logo"
-              /></a>
-            </div>
-            <div class="footer-links">
-              <div><a href="about.html">About</a></div>
-              <div><a href="contact.html" class="active">Contact</a></div>
-            </div>
-            <div class="footer-icons">
-              <a href="#"
-                ><img
-                  src="images/icon-facebook.png"
-                  alt="Facebook Icon"
-                  class="facebook-icon"
-              /></a>
-              <a href="#"
-                ><img
-                  src="images/icon-instagram.png"
-                  alt="Instagram Icon"
-                  class="instagram-icon"
-              /></a>
-            </div>
+
+    <footer>
+      <div class="content-wrap">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <a href="index.html"
+              ><img src="images/Logo.png" alt="Squareyes Logo"
+            /></a>
           </div>
-          <p>©CA SL 2023</p>
+          <div class="footer-links">
+            <div><a href="about.html">About</a></div>
+            <div><a href="contact.html" class="active">Contact</a></div>
+          </div>
+          <div class="footer-icons">
+            <a href="#"
+              ><img
+                src="images/icon-facebook.png"
+                alt="Facebook Icon"
+                class="facebook-icon"
+            /></a>
+            <a href="#"
+              ><img
+                src="images/icon-instagram.png"
+                alt="Instagram Icon"
+                class="instagram-icon"
+            /></a>
+          </div>
         </div>
-      </footer>
-    </section>
+        <p>©CA SL 2023</p>
+      </div>
+    </footer>
   </body>
 </html>
