--- a/products/godzilla.html
+++ b/products/godzilla.html
@@ -19,7 +19,7 @@
     <title>Product | Godzilla</title>
   </head>
   <body>
-    <section class="header-section">
+    <div class="header-section">
       <div class="content-wrap">
         <header>
           <div class="logo">
@@ -74,14 +74,14 @@
           </div>
         </header>
       </div>
-    </section>
+    </div>
 
     <main>
       <section>
         <div class="godzilla-hero">
           <div class="product-container">
             <div class="content-wrap">
-              <div class="">
+              <div>
                 <div class="floated g1 hidden-img-big">
                   <img
                     src="../images/cover_godzilla.png"
@@ -125,7 +125,7 @@
         </div>
       </section>
 
-      <section>
+      <div>
         <div class="content-wrap">
           <div class="infopics">
             <img
@@ -138,7 +138,7 @@
             />
           </div>
         </div>
-      </section>
+      </div>
 
       <section id="film-info">
         <div class="content-wrap">
