--- a/videos.html
+++ b/videos.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
+    <script type="module" src="/js/pages/videos.js"></script>
     <title>Squareeyes | Videos</title>
   </head>
   <body>
@@ -83,7 +84,7 @@
           <nav class="genre-nav-content">
             <a href="#section-1">Action</a>
             <a href="#section-2">Kids</a>
-            <a href="#section-3">Fantasy</a>
+            <a href="#section-3">Drama</a>
             <a href="#section-4">Horror</a>
             <a href="#section-5">Comedy</a>
           </nav>
@@ -102,243 +103,55 @@
     <section class="genre" id="section-1">
       <h2>Action</h2>
       <div class="content-wrap">
-        <div class="movie-row">
-          <div class="movie">
-            <a href="products/godzilla.html"
-              ><img src="images/cover_hobbs.png" alt="Hobbs & Shaw cover"
-            /></a>
-            <p>Hobbs & Shaw</p>
-            <h3>$9.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_sweetheart.png" alt="Sweetheart cover"
-              /></a>
-            </div>
-            <p>Sweetheart</p>
-            <h3>$7.49</h3>
-          </div>
-          <div class="movie">
-            <a href="products/godzilla.html"
-              ><img src="images/cover_batman.png" alt="The Batman cover"
-            /></a>
-            <p>The Batman</p>
-            <h3>$9.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html">
-                <img
-                  src="images/cover_john_wick.png"
-                  alt="John Wick 3 Parabellum Cover"
-                />
-              </a>
-            </div>
-            <p>John Wick 3 Parabellum</p>
-            <h3>$9.99</h3>
-          </div>
+        <div class="loading-indicator">
+          <div class="spinner"></div>
+          <p>Loading...</p>
         </div>
+        <div class="movie-row actionGenre"></div>
       </div>
     </section>
 
     <section class="genre" id="section-2">
       <h2>Kids</h2>
       <div class="content-wrap">
-        <div class="movie-row">
-          <div class="movie">
-            <div>
-              <div>
-                <a href="products/godzilla.html">
-                  <img
-                    src="images/cover_adams_family.png"
-                    alt="Adans Family Halloween Cover"
-                  />
-                </a>
-              </div>
-            </div>
-            <p>Adans Family Halloween</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div class="cover">
-              <a href="products/toystory.html"
-                ><img src="images/cover_toystory4.png" alt="Toy Story 4 cover"
-              /></a>
-            </div>
-            <p>Toy Story 4</p>
-            <h3>$4.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/godzilla.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$9.99</h3>
-          </div>
+        <div class="loading-indicator">
+          <div class="spinner"></div>
+          <p>Loading...</p>
         </div>
+        <div class="movie-row kidsGenre"></div>
       </div>
     </section>
 
     <section class="genre" id="section-3">
-      <h2>Fantasy</h2>
+      <h2>Drama</h2>
       <div class="content-wrap">
-        <div class="movie-row">
-          <div class="movie">
-            <div>
-              <div>
-                <a href="products/godzilla.html">
-                  <img
-                    src="images/cover_godzilla.png"
-                    alt="Godzilla
-                  King of the monsters cover"
-                  />
-                </a>
-              </div>
-            </div>
-            <p>Godzilla King of the monsters</p>
-            <h3>$9.99</h3>
-          </div>
-          <div class="movie">
-            <div class="cover">
-              <a href="products/toystory.html">
-                <img
-                  src="images/cover_lord_of_the_rings.png"
-                  alt="Lord of the Rings
-                The Return of the King cover"
-                />
-              </a>
-            </div>
-            <p>Lord of the Rings The Return of the King</p>
-            <h3>$9.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/godzilla.html"
-                ><img
-                  src="images/cover_avenger.png"
-                  alt="Avengers Endgame cover"
-              /></a>
-            </div>
-            <p>Avengers Endgame</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$4.99</h3>
-          </div>
+        <div class="loading-indicator">
+          <div class="spinner"></div>
+          <p>Loading...</p>
         </div>
+        <div class="movie-row dramaGenre"></div>
       </div>
     </section>
 
     <section class="genre" id="section-4">
       <h2>Horror</h2>
       <div class="content-wrap">
-        <div class="movie-row">
-          <div class="movie">
-            <div>
-              <div>
-                <a href="products/godzilla.html"
-                  ><img src="images/cover_scream.png" alt="Scream cover"
-                /></a>
-              </div>
-            </div>
-            <p>Scream</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div class="cover">
-              <a href="products/toystory.html"
-                ><img src="images/cover_smile.png" alt="Smile cover"
-              /></a>
-            </div>
-            <p>Smile</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/godzilla.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$9.99</h3>
-          </div>
+        <div class="loading-indicator">
+          <div class="spinner"></div>
+          <p>Loading...</p>
         </div>
+        <div class="movie-row horrorGenre"></div>
       </div>
     </section>
 
     <section class="genre" id="section-5">
       <h2>Comedy</h2>
       <div class="content-wrap">
-        <div class="movie-row">
-          <div class="movie">
-            <div>
-              <div>
-                <a href="products/godzilla.html">
-                  <img
-                    src="images/cover_once_upon_a_time_in_hollywood.png"
-                    alt="Once Upon A Time In Hollywood cover"
-                  />
-                </a>
-              </div>
-            </div>
-            <p>Once Upon A Time In Hollywood</p>
-            <h3>$9.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$7.99</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/godzilla.html"
-                ><img src="images/cover_hook.png" alt="Hook cover"
-              /></a>
-            </div>
-            <p>Hook</p>
-            <h3>$7.49</h3>
-          </div>
-          <div class="movie">
-            <div>
-              <a href="products/toystory.html"
-                ><img src="images/cover_example.png" alt="Example cover"
-              /></a>
-            </div>
-            <p>Example Movie</p>
-            <h3>$9.99</h3>
-          </div>
+        <div class="loading-indicator">
+          <div class="spinner"></div>
+          <p>Loading...</p>
         </div>
+        <div class="movie-row comedyGenre"></div>
       </div>
     </section>
 
