--- a/products/movie.html
+++ b/products/movie.html
@@ -86,7 +86,7 @@
 
       <section id="recommendations">
         <div class="content-wrap">
-          <h4>Other recommendations</h4>
+          <h4>Our recommendations</h4>
           <div class="recommendations">
             <div class="rec-images"></div>
           </div>
