--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,21 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3734880, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
     <title>Squareeyes | Shoppingcart</title>
   </head>
   <body>
