--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn more about Squareeyes and its origin. Learn more about how to join our company."
+      content="Learn more about SquareEyes and its origin. Learn more about how to join our company."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,22 +16,8 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>Squareeyes | About</title>
+    <script type="module" src="/js/pages/about.js"></script>
+    <title>SquareEyes | About</title>
   </head>
   <body>
     <div class="header-section">
@@ -39,13 +25,16 @@
         <header>
           <div class="logo">
             <a href="index.html">
-              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
             ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -53,13 +42,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="index.html" class="nav-hidden">Home</a>
             <div class="h-links">
-              <a href="index.html">Home</a>
               <a href="videos.html">Videos</a>
+              <a href="about.html" class="active">About</a>
+              <a href="contact.html">Contact</a>
             </div>
-            <a href="about.html" class="nav-hidden active">About</a>
-            <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -68,6 +58,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -77,13 +68,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="cart.html">
+              <img
                 src="images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -110,7 +103,7 @@
                   always bound us together.
                 </p>
                 <p>
-                  Squareeyes was founded in 2015, to give film lovers a fast and
+                  SquareEyes was founded in 2015, to give film lovers a fast and
                   good platform to find interesting and high-quality films. Our
                   goal is to support all filmmakers and give you the choice
                   between all types of movies. That is why we strive to have as
@@ -118,7 +111,7 @@
                 </p>
                 <p>
                   We look forward to the continuation and hope you will continue
-                  to join us in Squareeyes.
+                  to join us in SquareEyes.
                 </p>
               </div>
             </div>
@@ -126,20 +119,22 @@
         </div>
       </section>
       <div class="about-logo">
-        <img src="images/about-logo.png" alt="Squareeyes Logo" />
+        <img src="images/about-logo.png" alt="SquareEyes Logo" />
       </div>
       <section>
         <div class="join-our-team-background">
           <div class="content-wrap">
             <div class="join-our-team">
               <div class="join-team-text">
-                <h3>Do you want to work at Squareeyes?</h3>
+                <h3>Do you want to work at SquareEyes?</h3>
                 <p>
                   We are always looking for new people to join our company. If
                   you are one of the people we are looking for, you can contact
                   our office.
                 </p>
-                <h2 class="learn-more">Learn More</h2>
+                <a href="contact.html">
+                  <h2 class="learn-more">Contact us here</h2>
+                </a>
               </div>
               <div class="join-our-team-image">
                 <h2>Join Our Team</h2>
@@ -159,7 +154,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="index.html"
-              ><img src="images/Logo.png" alt="Squareyes Logo"
+              ><img src="images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <div class="footer-links">
