--- a/cart.html
+++ b/cart.html
@@ -16,22 +16,8 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>Squareeyes | Shoppingcart</title>
+    <script type="module" src="/js/pages/cart.js"></script>
+    <title>SquareEyes | Shopping Cart</title>
   </head>
   <body>
     <div class="header-section">
@@ -39,13 +25,16 @@
         <header>
           <div class="logo">
             <a href="index.html">
-              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
             ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -53,13 +42,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="index.html" class="nav-hidden">Home</a>
             <div class="h-links">
-              <a href="index.html">Home</a>
               <a href="videos.html">Videos</a>
+              <a href="about.html">About</a>
+              <a href="contact.html">Contact</a>
             </div>
-            <a href="about.html" class="nav-hidden">About</a>
-            <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden active">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -68,6 +58,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -77,13 +68,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="cart.html">
+              <img
                 src="images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -98,104 +91,41 @@
           <h1>Cart</h1>
         </div>
       </div>
-
-      <section id="product-one">
-        <div class="content-wrap">
-          <div class="your-purchase">
-            <img
-              src="images/cover_godzilla.png"
-              alt="Godzilla
-            King of the monsters Cover"
-            />
-            <div class="your-purchase-content">
-              <h3>Godzilla: King of the Monsters</h3>
-              <div class="quantity-box">
-                <p>Quantity</p>
-                <form>
-                  <label for="quantity1" id="q1">Quantity</label>
-                  <input
-                    type="text"
-                    name="quantity"
-                    id="quantity1"
-                    placeholder="1"
-                  />
-                </form>
-              </div>
-              <p class="remove-product">X</p>
-            </div>
+      <section class="cart-container">
+        <div class="purchase-container">
+          <h2>Your purchase</h2>
+          <div class="empty-cart">
+            <h3>Your cart Is empty</h3>
+          </div>
+          <div id="cartContainer"></div>
+          <div class="back-to-store-button">
+            <a href="index.html"
+              ><img
+                src="images/BacktostoreButton.png"
+                alt="Back to store button"
+            /></a>
           </div>
         </div>
-      </section>
 
-      <section id="product-two">
-        <div class="content-wrap">
-          <div class="your-purchase">
-            <img src="images/cover_toystory4.png" alt="Toy Story 4 Cover" />
-            <div class="your-purchase-content">
-              <h3>Toy Story 4</h3>
-              <div class="quantity-box">
-                <p>Quantity</p>
-                <form>
-                  <label for="quantity2" id="q2">Quantity</label>
-                  <input
-                    type="text"
-                    name="quantity"
-                    id="quantity2"
-                    placeholder="1"
-                  />
-                </form>
-              </div>
-              <p class="remove-product">X</p>
+        <div class="your-order-container">
+          <h2 class="your-order-h2">Cart Summary</h2>
+          <div class="your-order" id="yourOrderContainer"></div>
+          <div class="check3">
+            <div>
+              <h3>Details:</h3>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="personal-information">
-        <div class="personal-content-wrap">
-          <div class="conta">
-            <h2>Your Information</h2>
-            <div class="your-information">
-              <p>Ola Normann</p>
-              <p>Fictional Street 1</p>
-              <p>8907 Brønnøysund</p>
-              <p>NO Norway</p>
+            <div>
+              <p>Order</p>
+              <p>Shipping</p>
+              <p>TOTAL</p>
             </div>
+            <div id="totalDetails"></div>
           </div>
-
-          <div class="conta">
-            <h2>How To Pay</h2>
-            <div class="how-to-pay">
-              <div>
-                <input type="radio" name="payment-method" id="invoice" />
-                <label for="invoice">Invoice</label>
-              </div>
-              <div>
-                <input
-                  type="radio"
-                  name="payment-method"
-                  id="partial-payment"
-                />
-                <label for="partial-payment">Partial Payment</label>
-              </div>
-              <div>
-                <input type="radio" name="payment-method" id="vipps" />
-                <label for="vipps">Vipps</label>
-              </div>
-              <div>
-                <input type="radio" name="payment-method" id="card-input" />
-                <label for="card-input">Card</label>
-                <img src="images/card-mastercard.png" alt="Mastercard Icon" />
-                <img src="images/card-visa.png" alt="Visa Icon" />
-                <img src="images/card-amex.png" alt="American Express Icon" />
-              </div>
-            </div>
+          <div class="cart-button">
+            <a href="checkout.html">
+              <h2 class="cta continue-button">Continue</h2>
+            </a>
           </div>
-        </div>
-        <div class="cart-button">
-          <a href="checkout.html">
-            <h2 class="cta continue-button">Continue</h2>
-          </a>
         </div>
       </section>
     </main>
@@ -205,7 +135,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="index.html"
-              ><img src="images/Logo.png" alt="Squareyes Logo"
+              ><img src="images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <div class="footer-links">
