--- a/checkout-success.html
+++ b/checkout-success.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Thank you for shopping at Squareeyes. We hope you have had a pleasant shopping experience and hope to see you again soon."
+      content="Thank you for shopping at SquareEyes. We hope you have had a pleasant shopping experience and hope to see you again soon."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,22 +16,8 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>Squareeyes | Checkout-Success</title>
+    <script type="module" src="/js/pages/checkout-success.js"></script>
+    <title>SquareEyes | Checkout-Success</title>
   </head>
   <body>
     <div class="header-section">
@@ -39,13 +25,16 @@
         <header>
           <div class="logo">
             <a href="index.html">
-              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
             ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -53,13 +42,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="index.html" class="nav-hidden">Home</a>
             <div class="h-links">
-              <a href="index.html" class="active">Home</a>
               <a href="videos.html">Videos</a>
+              <a href="about.html">About</a>
+              <a href="contact.html">Contact</a>
             </div>
-            <a href="about.html" class="nav-hidden">About</a>
-            <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -68,6 +58,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -77,13 +68,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="cart.html">
+              <img
                 src="images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -104,30 +97,12 @@
           <div class="success-container">
             <div class="check-success1">
               <h3>Order Confirmation</h3>
-              <p>Your order will be available for download immediately.</p>
-              <div>
-                <div class="success-images">
-                  <div>
-                    <img
-                      src="images/cover_godzilla.png"
-                      alt="Godzilla
-                      King of the monsters Cover"
-                    />
-                    <a href="#">
-                      <h4>Download</h4>
-                    </a>
-                  </div>
-                  <div>
-                    <img
-                      src="images/cover_toystory4.png"
-                      alt="Toy Story 4 Cover"
-                    />
-                    <a href="#">
-                      <h4>Download</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
+              <p>Your purchase was successful.</p>
+              <img
+                src="images/8665808_thumbs_up_icon.png"
+                alt="Thumbs-Up image"
+              />
+              <p>We will ship your items as soon as possible.</p>
             </div>
 
             <div class="check-success2">
@@ -155,7 +130,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="index.html"
-              ><img src="images/Logo.png" alt="Squareyes Logo"
+              ><img src="images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <div class="footer-links">
