--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to Squareeyes where there is a movie for your every mood. Browse our large selection of movies at competitive prizes. "
+      content="Welcome to SquareEyes where there is a movie for your every mood. Browse our large selection of movies at competitive prizes. "
     />
     <meta
       name="keywords"
@@ -21,22 +21,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
     <script type="module" src="/js/pages/index.js"></script>
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>Squareeyes | Homepage</title>
+    <title>SquareEyes | Homepage</title>
   </head>
   <body>
     <div class="header-section">
@@ -44,13 +29,16 @@
         <header>
           <div class="logo">
             <a href="index.html">
-              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
             ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -58,13 +46,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="index.html" class="nav-hidden active">Home</a>
             <div class="h-links">
-              <a href="index.html" class="active">Home</a>
               <a href="videos.html">Videos</a>
+              <a href="about.html">About</a>
+              <a href="contact.html">Contact</a>
             </div>
-            <a href="about.html" class="nav-hidden">About</a>
-            <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -73,6 +62,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -82,13 +72,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="cart.html">
+              <img
                 src="images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -99,7 +91,7 @@
         <div class="content-wrap">
           <div class="hero-text">
             <h1>
-              Welcome to Squareeyes
+              Welcome to SquareEyes
               <span>where there is a movie for your every mood</span>
             </h1>
             <div>
@@ -124,7 +116,7 @@
 
       <section class="avengers_add">
         <div class="add-container">
-          <a href="products/movie.html?id=b9e4edb1-e798-45e3-9c46-f7cd75b9326f">
+          <a href="http://127.0.0.1:5501/products/movie.html?id=21">
             <h2>Avengers Endgame. Out Now</h2>
           </a>
         </div>
@@ -147,7 +139,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="index.html"
-              ><img src="images/Logo.png" alt="Squareyes Logo"
+              ><img src="images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <nav class="footer-links">
